# agentic-or-workshop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
.claude/commands/: commit.md  pr.md
exercise/: README.md
exercise/problems/P01-ev-linehaul-charging/: exercise-statement.md
exercise/problems/P02-cold-chain-distribution/: exercise-statement.md
exercise/problems/P03-intermodal-container-routing/: exercise-statement.md
exercise/problems/P04-last-mile-locker-assignment/: exercise-statement.md
exercise/problems/P05-disruption-contraflow/: exercise-statement.md
skills/atom-one-dark-html-harmonizer/: SKILL.md
skills/atom-one-dark-html-harmonizer/agents/: openai.yaml
skills/atom-one-dark-html-harmonizer/references/: component-guidelines.md
skills/atom-one-dark-html-harmonizer/scripts/: apply_theme.sh  evaluate_theme.sh
skills/mise-uv-install-test/: SKILL.md
skills/mise-uv-install-test/agents/: openai.yaml
skills/mise-uv-install-test/scripts/: install_and_test.sh
workshop/: README.md
workshop/data/: README.md  arcs.csv  depots.csv  scenario_demands.csv  scenarios.csv  towns.csv  validate_data.py
workshop/introduction/: 00-session-goal.html  01-workshop-intro-slides.html
workshop/materials/part-00-fundamental/: paradigm-shift-script.md  participant_exercise.md
workshop/materials/part-02-build-multi-agent/: README.md  compare_all_solutions.py
workshop/materials/part-03-harness-optimization/: README.md  compare_all_harnesses.py
workshop/materials/shared/: atom-one-dark-guidelines.md  (+1 more)
(+103 files in other folders)
